--- a/src/pages/logging.css
+++ b/src/pages/logging.css
@@ -1,6 +1,6 @@
 .logging-page {
   display: flex;
   width: 100vw;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
