--- a/src/components/loggingTable.css
+++ b/src/components/loggingTable.css
@@ -1,27 +1,13 @@
 .table {
   height: 80%;
+  width: 100%;
   overflow: auto;
 }
 
-.container {
-  display: grid;
-  width: 100%;
-}
-
-.subContainer {
-  display: grid;
-  grid-template-columns: 50px 300px 1fr;
-}
-
-.item {
-  padding: 4px;
-  text-align: left;
-  justify-self: stretch;
-  align-self: stretch;
-}
-
-.log {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.Toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 10px;
+  border-bottom: 1px solid lightgray;
 }
