--- a/src/components/logging/style.css
+++ b/src/components/logging/style.css
@@ -1,32 +1,75 @@
-.logging-page {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+/* 
+* ---- logging table ----
+*/
+.log-container{
+  height: 100vh;
+  width: 100%,;
+  position: relative;
 }
-
-.Log {
-  padding: 8px 16px;
-  margin-top: 4px;
-  border-bottom: 1px solid lightgray;
-  cursor: pointer;
-}
-
-.table {
-  width: 100%;
-  overflow: auto;
-}
-
-.Toolbar {
+.log-container .toolbar{
+  height: 70px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding-bottom: 10px;
-  border-bottom: 1px solid lightgray;
-  position: sticky;
-  top: 0;
+  background-color: var(--fsp-banner-bg-color);   
+  border-bottom: 2px solid #eee;
+}
+.log-container .log-rows{
+  overflow-y: auto;
+  height: calc(100vh - 70px);
 }
 
+/*
+* ----log row-----
+*/
+.log-row-title {
+  padding: 0.3rem 0.8rem;
+  margin-top: 0.3px;
+  cursor: pointer;
+  background-color: var(--fsp-bg-color);
+}
+.log-row-content{
+  padding-left: 1rem;
+}
+.log-row-content .json-kv{
+  padding-left: 2rem;
+}
+.log-row-content .json-kv:hover{
+  background-color: var(--fsp-bg-color);
+  border-radius: 0.2rem;
+}
+.log-row-content .json-kv .json-key{
+  text-transform: capitalize;
+  display: inline-block;
+  width: 150px; 
+}
+
+/*
+* ---- Pagination ----
+*/
 .pagination {
-  position: sticky;
-  bottom: 0;
+  position: absolute;
+  bottom: 10px;
+  right: 20px; 
+  line-height:30px;
+}
+
+.pagination .button {
+  border-radius: 8px;
+  cursor: pointer;
+  transition: border-color 0.25s; 
+  background-color: white;
+  border: none;
+  padding:0.3rem 0.5rem;
+  border: 1px solid #535151;
+}
+.pagination span {
+  display: inline-block;
+  margin: 0 0.3rem;
+}
+
+.pagination select {
+  display: inline-block;
+  margin: 0 0.3rem;
+  padding:0.3rem 0.5rem;
+  border-radius: 8px;
 }
