--- a/src/pages/monitor/MonitorPage.module.css
+++ b/src/pages/monitor/MonitorPage.module.css
@@ -1,9 +1,18 @@
 .container{
 
 }
+
 .container h1 {
     font-size: 2rem;
     font-weight: bold;
+}
+.container hr{
+    margin: 0;
+    padding: 0;
+    border:none;
+}
+.progressbar{
+    width: 100%;
 }
 
 .servicesContainer {
